--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -9,6 +9,13 @@
     "permissions": [
         "activeTab"
     ],
+    "content_scripts": [
+        {
+            "matches": ["<all_urls>"],
+            "js": ["content.js"],
+            "run_at" : "document_idle"
+        }
+    ],
     "manifest_version": 2
 }
 
