--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -16,6 +16,9 @@
             "run_at" : "document_idle"
         }
     ],
+    "browser_action": {
+        "default_popup": "popup.html"
+    },
     "manifest_version": 2
 }
 
