--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Chair",
+    "name": "TwoCents",
     "version": "0.0.1",
     "description": "Hack the North 2018 Project",
     "background": {
@@ -18,6 +18,10 @@
     ],
     "browser_action": {
         "default_popup": "popup.html"
+    },
+    "icons": {
+        "16": "favicon16.png",
+        "32": "favicon32.png"
     },
     "manifest_version": 2
 }
